force-app/main/default/objects/ExternalProspectData__c/ExternalProspectData__c.object-meta.xml
<CustomObject>
    <description>Data point harmonisé issu d'une source externe pour un prospect.</description>
    <label>External Prospect Data</label>
    <nameField>
        <label>External Prospect Data Name</label>
        <type>AutoNumber</type>
        <displayFormat>EPD-{000000}</displayFormat>
    </nameField>
    <pluralLabel>External Prospect Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>