force-app/main/default/objects/ExternalProspectData__c/fields/DataSource__c.field-meta.xml
<CustomField>
    <fullName>DataSource__c</fullName>
    <label>Data Source</label>
    <referenceTo>DataSource__c</referenceTo>
    <relationshipLabel>Prospect Data Points</relationshipLabel>
    <relationshipName>ProspectDataPoints</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>