force-app/main/default/objects/ExternalProspectData__c/fields/MetricValue__c.field-meta.xml
<CustomField>
    <fullName>MetricValue__c</fullName>
    <label>Metric Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>