force-app/main/default/objects/ExternalProspectData__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>60</length>
    <type>Text</type>
</CustomField>