force-app/main/default/objects/ExternalProspectData__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <label>Prospect</label>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipLabel>External Data Points</relationshipLabel>
    <relationshipName>ExternalDataPoints</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>