force-app/main/default/objects/ExternalProspectData__c/fields/RecordDate__c.field-meta.xml
<CustomField>
    <fullName>RecordDate__c</fullName>
    <label>Record Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>